Added logo stamp

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     * {box-sizing: border-box;}
     body { text-align: center; padding: 0; background: #141820; color: #fff; font-family: Mooli,sans-serif; }
     h1 { font-size: 50px; font-weight: 100; text-align: center; font-family: Mooli,sans-serif; color: #01ae74;}
-    body { font-family: Open Sans,sans-serif; font-weight: 100; font-size: 20px; color: #fff; text-align: center;>
+    body { font-family: Open Sans,sans-serif; font-weight: 100; font-size: 20px; color: #fff; text-align: center; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center;}
     article { display: block; width: 700px; padding: 50px; margin: 0 auto; }
-        a { color: #e3fcc2; font-weight: lighter; text-decoration: none;}
-        a:hover { text-decoration: none; }
-        svg { width: 75px; margin-top: 1em; fill: #fff; }
-        small { font-size: 12px; }
+    a { color: #e3fcc2; font-weight: lighter; text-decoration: none;}
+    a:hover { text-decoration: none; }
+    svg { width: 75px; margin-top: 1em; fill: #fff; }
+    small { font-size: 12px; }
 </style>
 
 <article>
